UI: correctly adds spacing for selection-management (#22006)
On iOS the safe area was not applied correctly.

--- a/plugins/chat/assets/stylesheets/mobile/chat-selection-manager.scss
+++ b/plugins/chat/assets/stylesheets/mobile/chat-selection-manager.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-bottom: env(safe-area-inset-bottom);
 
     .cancel-btn {
       margin-left: initial;
@@ -10,6 +11,10 @@
 
     .btn {
       margin-bottom: 0.25em;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
